Project page, 2 sample projects

--- a/P2/index.html
+++ b/P2/index.html
@@ -18,8 +18,7 @@
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="./pages/projects.html">Projects</a></li>
                 <li><a href="./pages/stories.html">Stories</a></li>
                 <li><a href="./pages/about.html">About</a></li>
                 <li><a href="./pages/contact.html">Contact</a></li>
@@ -37,12 +36,14 @@
                     will
                     reduce
                     the environmental footprint of any project.</h2>
-                <a class="button-nav" href="#">Contact us &nbsp &nbsp ➞</a>
+                <a class="button-nav" href="./pages/contact.html">Contact us &nbsp &nbsp ➞</a>
+                <img src="./img/landing.jpeg" alt=""">
             </div>
         </div>
     </div>
 
-    <div class="wrap-content brands">
+
+    <div class="brands">
         <img src="./img/p1.jpg" alt="">
         <img src="./img/p2.jpg" alt="">
         <img src="./img/p3.jpg" alt="">
@@ -57,7 +58,7 @@
 
 
 
-        <!-- <div class="wrap-content">
+    <!-- <div class="wrap-content">
             <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
             <h2 class="subheading">We believe our team can bring a new perspective to design and operations that will
                 reduce
@@ -78,208 +79,184 @@
         </div> -->
 
 
-        <section class="bg-gray">
-            <div class="wrap-content">
-                <div>
-                    <h2>Engineering consulting and technical services</h2>
+    <section class="bg-gray">
+        <div class="wrap-content">
+            <div>
+                <h2>Engineering consulting and technical services</h2>
 
-                    <div class="two-column">
-                        <div class="font-large">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consectetur facilis rerum
-                                saepe
-                                porro maxime placeat consequuntur quo cumque nisquae.
-                            </p>
+                <div class="two-column">
+                    <div class="font-large">
+                        <p>
+                            SEEDA is an enthusiastic, creative and diverse team offering engineering and project
+                            management services to assist clients in the successful and sustainable execution of
+                            projects.
+                        </p>
 
-                            <p>
-                                distinctio odit illo officiis
-                                iusto
-                                quisquam repudiandae, veritatis atque tempore. Recusandae sit cum nihil nam ducimus
-                                similique
-                                dicta doloremque?
-                            </p>
-                            <p>Fusce sed ipsum rutrum tellus rhoncus congue. Duis euismod enim in orci sodales
-                                venenatis. Curabitur placerat scelerisque aliquet. Proin ac ante at est maximus
-                                tincidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore
-                                illum sit libero soluta nulla doloremque velit corporis iusto nam.</p>
-                        </div>
-                        <img class="image-medium" src="./img/perspective.jpg" alt="people looking at a monitor">
+                        <p>
+                            Our Team is supported by a dynamic group of twenty Associates with many years of experience
+                            in executing Oil & Gas, Mining, Petrochemical, Pipeline, Infrastructure, Power Generation
+                            and Water Treatment projects.
+                        </p>
+                        <p>As well as the Associates currently in SEEDA we have access to many other Canadian-based
+                            experienced engineers and technologists available in Western Canada.
+                        </p>
+                    </div>
+                    <img class="image-medium" src="./img/perspective.jpg" alt="people looking at a monitor">
+                </div>
+
+
+                <div class="services-list">
+                    <div class="service">
+                        <img src="./icons/monitor effectiveness.svg" alt="monitor icon">
+                        <h3>Monitor effectiveness of workflows, processes and interfaces </h3>
+                        <p>With rigorous monitoring, we will improve the effectiveness and efficiency of your workflows, processes, and interface.</p>
                     </div>
 
+                    <div class="service">
+                        <img src="./icons/project planning.svg" alt="planning icon">
+                        <h3>Project planning, management and execution support across project lifecycle</h3>
+                        <p>From the beginning, we will identify project objectives, developing solutions, and putting
+                            your project plan into motion.</p>
+                    </div>
 
-                    <div class="services-list">
-                        <div class="service">
-                            <img src="./icons/monitor effectiveness.svg" alt="monitor icon">
-                            <h3>Monitor effectiveness of workflows, processes and interfaces </h3>
-                            <p>Nec sagittis aliquam malesuada bibendum. Cursus metus aliquam eleifend mi in nulla. Ut
-                                tellus
-                                elementum sagittis vitae et leo duis.</p>
-                        </div>
+                    <div class="service">
+                        <img src="./icons/regulatory.svg" alt="compliance support icon">
+                        <h3>Regulatory, Environmental submissions and compliance support</h3>
+                        <p>We will work with you to ensure that your facilities (industrial, commercial and
+                            institutional) operate in compliance with current standards.</p>
+                    </div>
 
-                        <div class="service">
-                            <img src="./icons/project planning.svg" alt="planning icon">
-                            <h3>Project planning, management and execution support across project lifecycle</h3>
-                            <p>Vestibulum morbi blandit cursus risus at ultrices mi tempus. Auctor elit sed vulputate
-                                mi. Eu
-                                scelerisque felis imperdiet proin fermentum leo vel. </p>
-                        </div>
+                    <div class="service">
+                        <img src="./icons/feasibility.svg" alt="report icon">
+                        <h3>Feasibility studies and reports</h3>
+                        <p>Throughout various studies, we will provide you with crucial information that will help your
+                            project succeed.</p>
+                    </div>
 
-                        <div class="service">
-                            <img src="./icons/regulatory.svg" alt="compliance support icon">
-                            <h3>Regulatory, Environmental submissions and compliance support</h3>
-                            <p>Nec nam aliquam sem et tortor consequat id. Vel facilisis volutpat est velit egestas dui
-                                id
-                                ornare arcu. A lacus vestibulum sed arcu non. </p>
-                        </div>
-
-                        <div class="service">
-                            <img src="./icons/feasibility.svg" alt="report icon">
-                            <h3>Feasibility studies and reports</h3>
-                            <p>Elementum sagittis vitae et leo duis ut diam quam. Aliquam nulla facilisi cras fermentum
-                                odio
-                                eu
-                                feugiat. Adipiscing diam donec adipiscing tristique risus nec feugiat. </p>
-                        </div>
-
-                        <div class="service">
-                            <img src="./icons/project surveillance.svg" alt="project audit icon">
-                            <h3>Project surveillance and audit consultancy</h3>
-                            <p>Posuere lorem ipsum dolor sit amet consectetur adipiscing. Pellentesque sit amet
-                                porttitor
-                                eget
-                                dolor morbi non. Sed enim ut sem viverra aliquet eget sit amet tellus. </p>
-                        </div>
+                    <div class="service">
+                        <img src="./icons/project surveillance.svg" alt="project audit icon">
+                        <h3>Project surveillance and audit consultancy</h3>
+                        <p>We will verify that your organization continues to remain certified and identify improvement
+                            initiatives and their supporting
+                            documentation.</p>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </section>
+    </section>
 
-        <section class="bg-black-gray">
-            <div class="wrap-content">
-                <h2>We assist you in the delivering of sustainable projects</h2>
-                <div class="two-column font-large cards">
-                    <div>
+    <section class="bg-black-gray">
+        <div class="wrap-content">
+            <h2>We assist you in the delivering of sustainable projects</h2>
+            <div class="two-column font-large cards">
+                <div>
 
-                        <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam
-                            quisquam fugit
-                            amet consequatur sequi quos consequuntur.</p>
-                        <a href="#"> <img src="./img/about.jpg" alt="" class="image-large">
-                            <h3>STRUNA: Engineering Dashboard</h3>
-                            <h4>Pellentesque aliquet metus ut neque rutrum Pellentesque aliquet metus ut neque rutrum.
-                            </h4>
-                        </a>
+                    <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam
+                        quisquam fugit
+                        amet consequatur sequi quos consequuntur.</p>
+                    <a href="./pages/struna.html"> <img src="./img/about.jpg" alt="" class="image-large">
+                        <h3>STRUNA: Engineering Dashboard</h3>
+                        <h4>Stress/structural Navigator or Engineering Dashboard.
+                        </h4>
+                    </a>
 
-                        <div>
-                            <a href="#">
-                                <img src="./img/project-4.jpg" alt="project site" class="image-very-large">
-                                <h3>Economic Water & Electricity</h3>
-                                <h4>Etiam aliquam ornare eleifend fusce cursus mi in ex dapibus tincidunt.</h4>
-                            </a>
-                        </div>
-                    </div>
                     <div>
                         <a href="#">
-                            <img src="./img/project-1.jpg" alt="project site" class="image-very-large">
-                            <h3>Re-engineering Canada </h3>
-                            <h4>Maecenas aliquam, nisl in faucibus sagittis, erat est pretium tortor, vulputate
-                                tristique
-                                lansa.</h4>
+                            <img src="./img/project-4.jpg" alt="project site" class="image-very-large">
+                            <h3>Economic Water & Electricity</h3>
+                            <h4>Providing water and electricity to rural residents.</h4>
                         </a>
-                        <div>
-                            <a href="#">
-                                <img src="./img/project-3.jpg" alt="project site" class="image-large">
-                                <h3>Sustainable Development</h3>
-                                <h4>Mauris pharetra augue tortor, a viverra nulla varius vel phasellus tempus orci sit
-                                    amet
-                                    mollis.</h4>
-                            </a>
-                        </div>
                     </div>
                 </div>
-
-                <div class=" bg-dark-gray large-card">
-                    <div class="text-white">
-                        <h3>View all our works</h3>
-                        <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
-                            fermentum.
-                            Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
-                            vitae
-                            sapien
-                            pellentesque. </p>
-                        <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
-                            tellus
-                            id
-                            interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
-                            mattis
-                            molestie a iaculis at erat pellentesque adipiscing.</p>
-    
-                        <a href="#">Look at our portfolio ></a>
-                    </div>
-                    <img src="./img/large-card.jpeg" alt="project site">
-                </div>
-
-            </div>
-
-        </section>
-
-
-
-
-        <section>
-            <div class="wrap-content">
-                <h2>The latest from SEEDA</h2>
-
-                <div class="article-card-wrapper">
-                    <div class="article-card">
-                        <div>
-                            <h3>Hydraulic ram pump systems</h3>
-                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
-                                pharetra.
-                            </p>
-                            <a href="./pages/hydraulic-ramp.html">Read more ></a>
-                        </div>
-                        <img src="./img/article-1.jpg" alt="">
-                    </div>
-
-                    <div class="article-card">
-                        <div>
-                            <h3>It's time to step up</h3>
-                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
-                                pharetra.
-                            </p>
-                            <a href="#">Read more ></a>
-                        </div>
-                        <img src="./img/article-2.jpg" alt="">
+                <div>
+                    <a href="./pages/reengineering-canada.html">
+                        <img src="./img/project-1.jpg" alt="project site" class="image-very-large">
+                        <h3>Re-engineering Canada </h3>
+                        <h4>Building a Nation 150 years after three British Fiefdoms in North America United.</h4>
+                    </a>
+                    <div>
+                        <a href="#">
+                            <img src="./img/project-3.jpeg" alt="project site" class="image-large">
+                            <h3>Structural Steel Optimization</h3>
+                            <h4>Using universal structural materials for modules to save steel, cut cost, and reduce
+                                emissions.
+                            </h4>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="wrap-content">
-                <div class="bg-dark-gray large-card team">
-                    <div class="text-white">
-                        <h3>Our team</h3>
-                        <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
-                            elementum
-                            nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
-                        <a class="button-nav" href="#">Meet our team ➞</a>
+            <div class=" bg-dark-gray large-card">
+                <div class="text-white">
+                    <h3>View all our works</h3>
+                    <p>For nearly 50 years, we have successfully completed projects around the world, from Argentina to
+                        Canada, and Russia to Spain.</p>
+                    <a href="#">Look at our portfolio ></a>
+                </div>
+                <img src="./img/large-card.jpg" alt="project site">
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
+    <section style="background-color: #F2F4F8;">
+        <div class="wrap-content">
+            <h2>The latest from SEEDA</h2>
+
+            <div class="article-card-wrapper">
+                <div class="article-card">
+                    <div>
+                        <h3>Hydraulic ram pump systems</h3>
+                        <p>It is time to investigate the alternatives for water pumps.
+                        </p>
+                        <a href="./pages/hydraulic-ramp.html">Read more ></a>
                     </div>
-                    <div class="members">
-                        <img src="./img/max.jpg" alt="">
-                        <img src="./img/dioni.jpg" alt="">
-                        <img src="./img/dima.jpg" alt="">
-                        <img src="./img/masha.jpg" alt="">
-                        <div>
-                        </div>
+                    <img src="./img/article-1.jpg" alt="">
+                </div>
+
+                <div class="article-card">
+                    <div>
+                        <h3>It's time to step up</h3>
+                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
+                        </p>
+                        <a href="./pages/time-to-step-up.html">Read more ></a>
+                    </div>
+                    <img src="./img/article-2.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="wrap-content">
+            <div class="bg-dark-gray large-card team">
+                <div class="text-white">
+                    <h3>Our team</h3>
+                    <p>Our Team is supported by a dynamic group of twenty Associates with many years of experience in
+                        executing Oil & Gas, Mining, Petrochemical, Pipeline, Infrastructure, Power Generation and Water
+                        Treatment projects.
+                    </p>
+                    <a class="button-nav" href="./pages/about.html">Meet our team ➞</a>
+                </div>
+                <div class="members">
+                    <img src="./img/max.jpg" alt="">
+                    <img src="./img/dioni.jpg" alt="">
+                    <img src="./img/dima.jpg" alt="">
+                    <img src="./img/masha.jpg" alt="">
+                    <div>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </section>
+    </section>
 
-   
 
-     
+
+
 
 
 
