--- a/P2/pages/about.html
+++ b/P2/pages/about.html
@@ -19,7 +19,6 @@
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="./stories.html">Stories</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
@@ -27,57 +26,97 @@
         </nav>
     </header>
 
-
-    <main>
-
-        <div class="wrap-content">
-            <h1>About Us</h1>
-            <img src="../img/about.jpg" alt="two people working on their laptops" class="image-large">
-
-            <div class="two-column font-large">
-                <p class="medium font-extra-large">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, ut
-                    nesciunt! Animi, culpa vitae!
-                    Incidunt tenetur, possimus, quibusdam repellendus, fugiat odio doloribus dolores assumenda.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur inventore nisi error
-                    blanditiis voluptatibus quae facere? Nisi quis perferendis omnis perspiciatis. Voluptatibus
-                    omnis voluptatum deleniti placeat molestias iste magni consequatur harum porro necessitatibus
-                    doloremque molestiae a, sunt quasi voluptate! Quibusdam assumenda corporis ea aspernatur
-                    laudantium consequatur voluptatum architecto quidem cum illo, porro commodi ipsam voluptate
-                    error unde minus fugit molestias! Repellat possimus consequatur sint inventore minima eligendi
-                    magnam facere cumque atque, accusamus ducimus exercitationem officiis temporibus ab est voluptas
-                    maiores facilis qui, quam ad natus quasi nobis itaque? Exercitationem, rerum!</p>
+    <div class="cover-medium">
+        <div>
+            <div class="wrap-content">
+                <h1>About Us</h1>
             </div>
         </div>
+    </div>
 
 
+    <main>
         <section class="wrap-content">
-            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, laborum?</h2>
-            <div class="two-column font-large">
-                <img src="../img/about-body1.jpg" alt="people looking at a laptop">
+            <div class="two-column font-large team">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus inventore enim, laudantium
-                        facilis dicta eos cumque iste veniam nihil quis aliquid minima eligendi illo! Sit, atque sed,
-                        exercitationem mollitia at unde sapiente laudantium delectus voluptatem libero suscipit! Fuga,
-                        mollitia fugiat!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ut, sit ex quam, ipsa qui
-                        laudantium nam harum officia recusandae aliquid accusantium veniam inventore tempore eum
-                        consectetur, eligendi error tenetur dolores atque reiciendis facilis perferendis ipsum
-                        voluptatum. Voluptatem, voluptate cupiditate.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus delectus laborum ipsum vel
-                        quis dolore accusantium non recusandae tempora, eveniet ex esse? Ea reprehenderit atque
-                        molestias? Ratione necessitatibus fugiat maxime. Dolore nostrum quibusdam voluptas impedit quod,
-                        voluptatem quaerat, consequuntur nesciunt sunt voluptate quas vel! In, corrupti. Voluptas
-                        consequatur exercitationem incidunt error, est eum omnis recusandae beatae fugiat quisquam
-                        blanditiis sed adipisci amet assumenda aliquam facilis ducimus voluptates eos! Consequatur
-                        dolorem nam laudantium sint quisquam et perspiciatis laborum quibusdam. Error, similique tempore
-                        nam ratione sint illo amet maxime facere temporibus, est incidunt saepe debitis illum
-                        necessitatibus quaerat vero dolorem nobis veniam?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quae molestias voluptatum earum
-                        nesciunt deserunt saepe reiciendis, porro, adipisci quibusdam animi ex ut repellat perspiciatis
-                        ab ducimus, ad dolorem mollitia similique unde omnis autem dolor! Omnis doloribus sequi
-                        exercitationem quia laudantium nihil suscipit nobis. Optio quod quam at vero. Ratione?</p>
+                    <img src="../img/max.jpg" alt="max">
+                    <h3>Max Chernetsov</h3>
+                    <p>A Professional Engineer registered in Alberta, Canada, with over 23 years of capital construction
+                        engineering, procurement and logistics experience with major Oil & Gas and Mining companies on
+                        several multi-billion projects valued near $22 Billion in North America, Europe, Asia, and
+                        Africa.
+                    </p>
+
+                    <p>He is based in Calgary, Canada and is fluent in English and Russian - both written and spoken.
+                    </p>
+                    <a
+                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fchernetsov%2F&sa=D&sntz=1&usg=AFQjCNHEGzBN2hoJpLAjLWZOk4k6UPvl4Q">View
+                        his LinkedIn profile</a>
+                </div>
+
+                <div>
+                    <img src="../img/dioni.jpg" alt="dioni">
+                    <h3>Dioni Cardona</h3>
+                    <p>A Professional Engineer registered in Alberta, Canada with extensive experience as a quality
+                        management professional and as a process engineer with a global EPFC company that provides
+                        engineering procurement, fabrication, construction services for major clients in Canada and
+                        worldwide.
+                    </p>
+
+                    <p>
+                        He has mentored and supervised a number of new graduate
+                        Engineers-in-Training (EIT), supported and provided professional references as a partial
+                        requirement of the association as a step towards achieving a professional designation in the
+                        practice of the engineering profession.
+                    </p>
+
+                    <p>
+                        Very significant exposures to various multi-cultural working environment for over 3 decades,
+                        speaks native Filipino language, very fluent in oral and written English communication, and also
+                        fluent in the Spanish language.
+                    </p>
+                    <a
+                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdioni-cardona-p-eng-861a95b%2F&sa=D&sntz=1&usg=AFQjCNEiv5-xa67P0yOlS4v9sBC2MbOwwg">View
+                        his LinkedIn profile</a>
                 </div>
             </div>
+
+
+            <div class="two-column font-large team">
+                <div>
+                    <img src="../img/dima.jpg" alt="dima">
+                    <h3>Dima Albdewi</h3>
+                    <p>Dima has five years of professional experience in Syria and Canada after receiving a degree in
+                        Civil Engineering from the University in Damascus, Syria. She specializes in water-related
+                        projects where she foster skills defining problems and scoping work for the facilities
+                        construction and rehabilitation.
+                    </p>
+
+                    <p>Dima is a dedicated team player with effective communication skills. She is able to provide a
+                        high-quality result in a timely manner.
+                    </p>
+                    <a
+                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdima-albdewi-a69649161%2F&sa=D&sntz=1&usg=AFQjCNGa8SCC_V7tM4zCRSNM-z7qBp2xDg">View
+                        her LinkedIn profile</a>
+                </div>
+
+                <div>
+                    <img src="../img/masha.jpg" alt="masha">
+                    <h3>Masha Chernetsova</h3>
+                    <p>Masha is an individual recognized for her dedication and commitment in every aspect of her life;
+                        she exhibits leadership skills while simultaneously understanding how to work with others in a
+                        team-based environment.
+                    </p>
+
+                    <p>She is a bilingual, customer oriented person that enjoys talking to and meeting new people.
+                    </p>
+                    <a
+                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fmasha-chernetsov-b4a321187%2F&sa=D&sntz=1&usg=AFQjCNEaito_mWlG30HSMkoLWVFlDtFcXw">View
+                        her LinkedIn profile</a>
+                </div>
+            </div>
+
+
 
             <div class="bg-black large-card">
                 <div class="text-white">
@@ -87,26 +126,20 @@
                         Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
                         vitae
                         sapien
-                        pellentesque. </p>
-                    <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
-                        tellus
-                        id
-                        interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
-                        mattis
-                        molestie a iaculis at erat pellentesque adipiscing.</p>
-
-                    <a href="#">Contact us ></a>
+                        pellentesque. </p>                
+                    <a href="../pages/contact.html">Contact us ></a>
                 </div>
                 <img src="../img/contact-us.jpg" alt="project site">
             </div>
 
+
         </section>
 
-    
+
     </main>
 
 
-    
+
     <div class="footer-contact">
         <div class="wrap-content contact-wrapper">
             <div class="contact-text">Stay in touch and hear the latest from us</div>
