--- a/P2/pages/cleantech-asia.html
+++ b/P2/pages/cleantech-asia.html
@@ -26,52 +26,30 @@
         </nav>
     </header>
 
-    <div class="cover-medium">
-        <div>
-            <div class="wrap-content">
-                <h1>Contact Us</h1>
-            </div>
-        </div>
-    </div>
 
     <main>
 
+        <div class="wrap-content">
+            <img src="../img/article-3.jpg" alt="people sitting next to each other" class="article-header">
+            <h1 class="article-title">Cleantech Forum Asia</h1>
+            <h2 class="author">Max Chernetsov</h2>
 
-        <section class="wrap-content">
-            <h2>Thank you for considering SEEDA!
-            </h2>
 
-            <div class="two-column">
-                <div class="font-large">
-                    <p>Please complete the form so we can provide quick and efficient service. </p>
-                    <p>
-                        If urgent, please contact : 403-966-9848
-                        SEEDA Inc. 2000, 125 9 AVENUE SOUTHEAST, CALGARY, AB, T2G 0P6
-                    </p>
+            <div class="wrap-content">
+                <div class="article">
+                    <p class="article-date">November 2019</p>
+                    <div class="font-medium article-body">
+                        <p>"Cleantech Forum Asia brings you easy access to start-ups, scale-ups, investors and
+                            multinationals from across the region and the world. Not only will you meet the future of
+                            Asia’s sustainable innovation ecosystem, but you’ll also discover the global connections
+                            that will fuel your next opportunities wherever you live and work. It’s two days of insights
+                            into sustainable innovation with the power to deliver a net zero future."
+                        </p>
+                        <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.cleantech.com%2Fevent%2Fcleantech-forum-asia%2F&sa=D&sntz=1&usg=AFQjCNHgZc4OY1ZcE3TjG-jsu4JzWq3PGg">Register here</a>
+                    </div>
                 </div>
-                <form action="#" class="order-request">
-                    <div class="input-group-1">
-                        <input type="text" id="fname" name="fname" placeholder="First Name">
-                        <input type="text" id="lname" name="lname" placeholder="Last Name">
-                    </div>
-
-                    <div class="input-group-2">
-                        <input type="email" id="email" name="email" placeholder="Email">
-                        <input type="tel" id="phone" name="phone" placeholder="Phone Number">
-                    </div>
-
-                    <div class="input-group-3">
-                        <textarea rows="8" cols="50" name="comment" form="usrform"
-                            placeholder="Provide your request or comments"></textarea>
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
-
             </div>
 
-
-
-        </section>
 
 
     </main>
