--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -29,54 +29,57 @@
     <div class="cover-medium">
         <div>
             <div class="wrap-content">
-                <h1>Contact Us</h1>
+                <h1>Projects</h1>
             </div>
         </div>
     </div>
 
+
     <main>
 
+        <div class="wrap-content">
+            <div class="two-column projects">
 
-        <section class="wrap-content">
-            <h2>Thank you for considering SEEDA!
-            </h2>
-
-            <div class="two-column">
-                <div class="font-large">
-                    <p>Please complete the form so we can provide quick and efficient service. </p>
-                    <p>
-                        If urgent, please contact : 403-966-9848
-                        SEEDA Inc. 2000, 125 9 AVENUE SOUTHEAST, CALGARY, AB, T2G 0P6
-                    </p>
+                <div class="project-card">
+                    <a href="../pages/struna.html"><img src="../img/about.jpg" alt="">
+                        <h3>STRUNA: Engineering Dashboard</h3>
+                        <p>Stress/structural Navigator or Engineering Dashboard.</p>
+                    </a>
                 </div>
-                <form action="#" class="order-request">
-                    <div class="input-group-1">
-                        <input type="text" id="fname" name="fname" placeholder="First Name">
-                        <input type="text" id="lname" name="lname" placeholder="Last Name">
-                    </div>
 
-                    <div class="input-group-2">
-                        <input type="email" id="email" name="email" placeholder="Email">
-                        <input type="tel" id="phone" name="phone" placeholder="Phone Number">
-                    </div>
-
-                    <div class="input-group-3">
-                        <textarea rows="8" cols="50" name="comment" form="usrform"
-                            placeholder="Provide your request or comments"></textarea>
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
+                <div class="project-card">
+                    <a href="#">
+                        <img src="../img/project-4.jpg" alt="">
+                        <h3>Economic Water & Electricity</h3>
+                        <p>Providing water and electricity to rural residents.</p>
+                    </a>
+                </div>
 
             </div>
 
 
+            <div class="two-column projects">
+                <div class="project-card">
+                    <a href="../pages/reengineering-canada.html"><img src="../img/project-1.jpg" alt="">
+                        <h3>Re-engineering Canada</h3>
+                        <p>Building a Nation 150 years after three British Fiefdoms in North America United.</p>
+                    </a>
+                </div>
+                <div class="project-card">
+                    <a href="#"><img src="../img/project-3.jpeg" alt="">
+                        <h3>Structural Steel Optimization</h3>
+                        <p>Using universal structural materials for modules to save steel, cut cost, and reduce
+                            emissions.</p>
+                    </a>
+                </div>
+            </div>
+        </div>
 
-        </section>
+
+
 
 
     </main>
-
-
 
     <div class="footer-contact">
         <div class="wrap-content contact-wrapper">
@@ -120,7 +123,6 @@
             </div>
         </div>
     </footer>
-
 
 
 </body>
