--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -19,7 +19,6 @@
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="./stories.html">Stories</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
@@ -27,11 +26,18 @@
         </nav>
     </header>
 
+    <div class="cover-medium">
+        <div>
+            <div class="wrap-content">
+                <h1>Stories</h1>
+            </div>
+        </div>
+    </div>
+
 
     <main>
 
         <div class="wrap-content">
-            <h1>Stories</h1>
             <div class="two-column stories">
 
                 <div class="story">
@@ -42,7 +48,7 @@
                 </div>
 
                 <div class="story">
-                    <a href="./hydraulic-ramp.html">
+                    <a href="./time-to-step-up.html">
                         <img src="../img/article-2.jpg" alt="">
                         <h3>It's time to step up</h3>
                         <p>July 2019</p>
@@ -52,23 +58,17 @@
             </div>
 
 
-            <div class="three-column stories">
+            <div class="two-column stories">
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-3.jpg" alt="">
-                        <h3>Nam vestibulum ultricies ligula</h3>
+                    <a href="./cleantech-asia.html"><img src="../img/article-3.jpg" alt="">
+                        <h3>Cleantech Forum Asia</h3>
                         <p>November 2019</p>
                     </a>
                 </div>
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-4.jpg" alt="">
-                        <h3>Maecenas elementum accumsan lectus</h3>
+                    <a href="./sustainable-development.html"><img src="../img/article-4.jpg" alt="">
+                        <h3>Sustainable Development</h3>
                         <p>January 2019</p>
-                    </a>
-                </div>
-                <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-5.jpg" alt="">
-                        <h3>Nunc laoreet nibh nec sapien</h3>
-                        <p>October 2018</p>
                     </a>
                 </div>
             </div>
