--- a/P2/pages/sustainable-development.html
+++ b/P2/pages/sustainable-development.html
@@ -26,52 +26,48 @@
         </nav>
     </header>
 
-    <div class="cover-medium">
-        <div>
-            <div class="wrap-content">
-                <h1>Contact Us</h1>
-            </div>
-        </div>
-    </div>
 
     <main>
 
+        <div class="wrap-content">
+            <img src="../img/article-4.jpg" alt="people sitting next to each other" class="article-header">
+            <h1 class="article-title">Sustainable Development</h1>
+            <h2 class="author">Max Chernetsov</h2>
 
-        <section class="wrap-content">
-            <h2>Thank you for considering SEEDA!
-            </h2>
 
-            <div class="two-column">
-                <div class="font-large">
-                    <p>Please complete the form so we can provide quick and efficient service. </p>
-                    <p>
-                        If urgent, please contact : 403-966-9848
-                        SEEDA Inc. 2000, 125 9 AVENUE SOUTHEAST, CALGARY, AB, T2G 0P6
-                    </p>
+            <div class="wrap-content">
+                <div class="article">
+                    <p class="article-date">January 2019</p>
+                    <div class="font-medium article-body">
+                        <p>Too many construction projects go over budget and are not completed on schedule. Both of
+                            these can have a drastic impact on the overall economics of a project. The lack of design
+                            innovation and construction efficiency is the primary cause of these problems. Even in the
+                            second millennium, there is significant room for improvement at a project planning phase
+                            that if appropriately addressed could ensure greater sustainability of most projects.
+                        </p>
+
+                        <p> Even in the second millennium, there is significant room for improvement at a project
+                            planning phase that if appropriately addressed could ensure greater sustainability of most
+                            projects.
+                        </p>
+
+                        <p>The current method of “Design – Construction” within a single organization may not
+                            necessarily consider all the outcomes at the end of construction and handover to operations.
+                            In fact, sometimes newly built facilities do not serve communities and stakeholders as
+                            planned. This is often because from the very beginning suppliers and vendors are asked to
+                            deliver their scope of work at the lowest cost without much consideration for what is best
+                            for the lifetime and socio-economics of the project.
+                        </p>
+
+                        <p>A small initial investment in a “Sustainability Study” by an objective team of experienced
+                            professionals to review the project profile, before the designers turn on the computers or
+                            the shovels hit the ground, will pay dividends during the construction and operation of the
+                            project. This is the essence of “Sustainable Development”.
+                        </p>
+                    </div>
                 </div>
-                <form action="#" class="order-request">
-                    <div class="input-group-1">
-                        <input type="text" id="fname" name="fname" placeholder="First Name">
-                        <input type="text" id="lname" name="lname" placeholder="Last Name">
-                    </div>
-
-                    <div class="input-group-2">
-                        <input type="email" id="email" name="email" placeholder="Email">
-                        <input type="tel" id="phone" name="phone" placeholder="Phone Number">
-                    </div>
-
-                    <div class="input-group-3">
-                        <textarea rows="8" cols="50" name="comment" form="usrform"
-                            placeholder="Provide your request or comments"></textarea>
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
-
             </div>
 
-
-
-        </section>
 
 
     </main>
